name:                adventofcode2017hs
version:             0.1.0.0
synopsis:            Advent of Code 2017 challenges solved in Haskell
homepage:            https://github.com/bno1/adventofcode2017hs
license:             MIT
license-file:        LICENSE
author:              bno1
maintainer:          bno1
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/bno1/adventofcode2017hs#readme>

executable day01
  hs-source-dirs:      src/
  main-is:             day01.hs
  default-language:    Haskell2010
  build-depends:       base

executable day02
  hs-source-dirs:      src/
  main-is:             day02.hs
  default-language:    Haskell2010
  build-depends:       base

source-repository head
  type:     git
  location: https://github.com/bno1/adventofcode2017hs
