name:                adventofcode2017hs
version:             0.1.0.0
synopsis:            Advent of Code 2017 challenges solved in Haskell
homepage:            https://github.com/bno1/adventofcode2017hs
license:             MIT
license-file:        LICENSE
author:              bno1
maintainer:          bno1
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/bno1/adventofcode2017hs#readme>

executable day01
  hs-source-dirs:      src/
  main-is:             day01.hs
  default-language:    Haskell2010
  build-depends:       base
  ghc-options:         -Wall -rtsopts

executable day02
  hs-source-dirs:      src/
  main-is:             day02.hs
  default-language:    Haskell2010
  build-depends:       base
  ghc-options:         -Wall -rtsopts

executable day03
  hs-source-dirs:      src/
  main-is:             day03.hs
  default-language:    Haskell2010
  build-depends:       base, containers >= 0.5.7, mtl >= 2.2
  ghc-options:         -Wall -rtsopts

executable day04
  hs-source-dirs:      src/
  main-is:             day04.hs
  default-language:    Haskell2010
  build-depends:       base, containers >= 0.5.7
  ghc-options:         -Wall -rtsopts

executable day05
  hs-source-dirs:      src/
  main-is:             day05.hs
  default-language:    Haskell2010
  build-depends:       base, vector >= 0.5.7
  ghc-options:         -Wall -rtsopts -O2

executable day06
  hs-source-dirs:      src/
  main-is:             day06.hs
  default-language:    Haskell2010
  build-depends:       base, vector >= 0.5.7
  ghc-options:         -Wall -rtsopts

executable day07
  hs-source-dirs:      src/
  main-is:             day07.hs
  default-language:    Haskell2010
  build-depends:       base, parsec >= 3.1, containers >= 0.5.7, mtl >= 2.2
  ghc-options:         -Wall -rtsopts

executable day08
  hs-source-dirs:      src/
  main-is:             day08.hs
  default-language:    Haskell2010
  build-depends:       base, parsec >= 3.1, containers >= 0.5.7, mtl >= 2.2
  ghc-options:         -Wall -rtsopts

executable day09
  hs-source-dirs:      src/
  main-is:             day09.hs
  default-language:    Haskell2010
  build-depends:       base
  ghc-options:         -Wall -rtsopts

executable day10
  hs-source-dirs:      src/
  main-is:             day10.hs
  default-language:    Haskell2010
  build-depends:       base, vector >= 0.5.7, mtl >= 2.2
  ghc-options:         -Wall -rtsopts

executable day11
  hs-source-dirs:      src/
  main-is:             day11.hs
  default-language:    Haskell2010
  build-depends:       base
  ghc-options:         -Wall -rtsopts

executable day12
  hs-source-dirs:      src/
  main-is:             day12.hs
  default-language:    Haskell2010
  build-depends:       base, parsec >= 3.1, containers >= 0.5.7, mtl >= 2.2
  ghc-options:         -Wall -rtsopts

executable day13
  hs-source-dirs:      src/
  main-is:             day13.hs
  default-language:    Haskell2010
  build-depends:       base
  ghc-options:         -Wall -rtsopts

source-repository head
  type:     git
  location: https://github.com/bno1/adventofcode2017hs
